...
    <string name="i18n_average_speed">Avg speed</string>
    <string name="i18n_average_heart_rate">Avg heart rate</string>
    <string name="i18n_calories">Calories</string>
    <string name="i18n_like_activity">Like activity</string>
    <string name="i18n_unlike_activity">Unlike activity</string>
    <string name="i18n_comments_count">%1$s comments</string>
    <string name="i18n_open_activity_photos">Open activity photos</string>
    <string name="i18n_close_photos">Close photos</string>
    <string name="i18n_photo_of">Photo %1$s of %2$s</string>
    <string name="i18n_return_to_activity">Return to activity</string>
    <string name="i18n_more_options">More options</string>
    <string name="i18n_edit_activity">Edit activity</string>
    <string name="i18n_name">Name</string>
    <string name="i18n_activity_name">Activity name</string>
    <string name="i18n_description">Description</string>
    <string name="i18n_add_description">Add a description</string>
...
